* Clean for presentation
* Change TODO to github format
- Remove dead code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<link rel="stylesheet" href="css/styles.css">
-	<!-- <script src="https://cdn.rawgit.com/dcodeIO/protobuf.js/6.8.6/dist/protobuf.min.js"></script> -->
 	<script src="scripts/app.js"></script>
 	<script src="scripts/display.js"></script>
 	<script src="scripts/server.js"></script>
@@ -15,7 +14,7 @@
 <body>
 	<div class="grid-wrapper">
 		<div class="frame" id="map">
-			<div id="map-title">North Umberlain | Eastern Continent</div>
+			<div id="map-title">North Umberlain | Sample Map</div>
 			<div id="map-viewer">
 				AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA ASSSSSSSSSSSSSSSSSSSSSSSSSSSSSSA AS...PPP......................SA ASPPPPPP......................SA
 				ASPPPPPP......................SA ASPPPPPP......................SA ASPPPPPP......................SA ASPPPPPP......................SA
@@ -29,7 +28,7 @@
 		</div>
 
 		<div class="frame" id="chat">
-			<u>[ CHAT : GLOBAL ]</u>
+			<u>[ CHAT : SAMPLE ]</u>
 			<p>[Global][ScrumMan33] how do i sell my chalk? </p>
 			<p>[Global][doodoo] use /market </p>
 			<p style="color:green">Jacobious whispered to you "We should add a hot link to commands or something" </p>
@@ -87,5 +86,4 @@
 
 	</div>
 </body>
-
 </html>
