#2 Escape HTML entities on command using native browser DOM

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="scripts/server.js"></script>
 	<script src="scripts/client.js"></script>
 	<script src="scripts/input.js"></script>
+	<script src="scripts/utils.js"></script>
 	<title>MudMud Client | Alpha 0.0.01</title>
 </head>
 
