Fix map wrapping on plain text
Replace map with something more related

--- a/index.html
+++ b/index.html
@@ -16,14 +16,38 @@
 		<div class="frame" id="map">
 			<div id="map-title">North Umberlain | Sample Map</div>
 			<div id="map-viewer">
-				AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA ASSSSSSSSSSSSSSSSSSSSSSSSSSSSSSA AS...PPP......................SA ASPPPPPP......................SA
-				ASPPPPPP......................SA ASPPPPPP......................SA ASPPPPPP......................SA ASPPPPPP......................SA
-				ASPPPPPP......................SA AS...PPP......................SA AS...PPP......................SA AS.................11111......SA
-				AS.................11111......SA AS.................11111......SA AS..G.......g......11111......SA AS..........gg....L11111......SA
-				AS...........gg...LLL.........SA AS........WW.gg...............SA AS........WWW.g...............SA AS........WWW.g...............SA
-				AS........WWW.................SA AS........WLLLL....L..........SA A22222.g.WWL..................SA A22222.WWWWW..................SA
-				A22222WWWWWWW.................SA A22222WWWWWWW.................SA A22222G.WWWWW.................SA AS..WW..WWWWWW................SA
-				AS.WWWW.WWWW..................SA AS..WWWWWW....................SA ASSSSSSSSSSSSSSSSSSSSSSSSSSSSSSA AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+TTTTTTTTTTTTT^TTTTTT^^^^^^^^^^^^
+T^TTTTTT..............^^^....^^^
+TTTTT....TT.TT.T...TT..^^.....^^
+TTT^....TTTTT....TTTTT.^..^^^..^
+TTT..TT.........TTTT...^.^^.^^.^
+^T..TTT..T^TTT.TT.....^^..^.^^.^
+TTT..TTT..TTT..^T.TT.^^^^...^..^
+TTT...TTT.....TTTTT..^..^.^^^.^^
+TTT.T..T^^T.TTTTTT..^^....^...^^
+TT......TTT..TTT...T^^^.^^^^.^^^
+T..T..T.TT....T...^^^^...^^...^^
+T.TTT....T..T...T^^....^..^.^.^^
+T.T^T..T...TTT...T^^...^^...^..^
+^..TTT....TT^TTT...^^.^^..^^^..^
+^..TTTTT...TTTTTT...^^^.....^^^^
+^...TT^T..TTTT.T......^......^^^
+^.T......TT^T..................^
+^.TT.TT.TTTT...................^
+^..T..T..TTTT..................^
+^.........T....................^
+^...........~~~~~.....--.~~~~~.^
+^.~~~~~~~~~~~~~~~~..~~--~~~~~~~~
+~~~~~~~~~~~~~..~~~~~~~--~~...~~~
+~~~~............~~~~~.--.......^
+^....#####...T...............T.^
+^..T.#...#..........T..........^
+^....#.........................^
+^.T..#...#..................T..^
+^....#####.....T...............^
+^..........T.......T....T....T.^
+^..............................^
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 			</div>
 		</div>
 
