--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="scripts/server.js"></script>
 	<script src="scripts/client.js"></script>
 	<script src="scripts/input.js"></script>
+	<script src="scripts/auth.js"></script>
 	<title>MudMud Client | Alpha 0.0.01</title>
 </head>
 
@@ -51,14 +52,7 @@ T.T^T..T...TTT...T^^...^^...^..^
 			</div>
 		</div>
 
-		<div class="frame" id="chat">
-			<u>[ CHAT : SAMPLE ]</u>
-			<p>[Global][ScrumMan33] how do i sell my chalk? </p>
-			<p>[Global][doodoo] use /market </p>
-			<p style="color:green">Jacobious whispered to you "We should add a hot link to commands or something" </p>
-			<p>[Global][doodoo] or just drop 'em. it won't sell for anything </p>
-			<p style="color:green">You whispered to Jacobious "too busy leveling. do it later" </p>
-		</div>
+		<div class="frame" id="chat"></div>
 
 		<div class="frame" id="context">
 			<u>[ INVENTORY ]</u>
@@ -110,4 +104,5 @@ T.T^T..T...TTT...T^^...^^...^..^
 
 	</div>
 </body>
+
 </html>
