Added random testing users Registered online frame

--- a/index.html
+++ b/index.html
@@ -64,15 +64,7 @@ T.T^T..T...TTT...T^^...^^...^..^
 			<br>
 		</div>
 
-		<div class="frame" id="online">
-			<u>[ ONLINE (5) ]</u>
-			<br> Jacobious
-			<br> Veeq (you)
-			<br> doodoo
-			<br> ScrumMan33
-			<br> JakeTrain
-			<br>
-		</div>
+		<div class="frame" id="online"></div>
 
 		<div class="frame" id="stats">
 			<u>[ STATS ]</u>
